--- a/WISH-LIST.asciidoc
+++ b/WISH-LIST.asciidoc
@@ -1,11 +1,12 @@
 Wish list
 =========
 R. S. Doiel, <rsdoiel@gmail.com>
-version 0.0.1x 2010.03.05
+version 0.0.3x 2010.04.21
 
 
 == Wish list for nshtools:
 
 * implement a simple find object that supports functionality like -type, -name, -changed-since. (e.g. `nsh.find('.',{'type':'d'}, function (error, item) {...});`)
+* implement a simple find object that supports filtering on mime type.
 * start tracking CommonJS and resolve implementation issues where appropriate. link:See http://wiki.commonjs.org/wiki/Filesystem/A/0http://wiki.commonjs.org/wiki/Filesystem/A/0[Filesystem proposal]
 
